--- a/style.css
+++ b/style.css
@@ -137,3 +137,32 @@ body {
   height: 1.4rem;
   margin-right: 1rem;
 }
+
+#examplesList li {
+  position: relative;
+  cursor: pointer;
+  margin-bottom: 10px;
+  padding-right: 10px;
+}
+
+.tooltip {
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  top: -13%;
+  transform: translateY(-50%);
+  background: #333;
+  color: #fff;
+  font-size: 12px;
+  padding: 3px 8px;
+  border-radius: 4px;
+  white-space: nowrap;
+  transition: opacity 0.3s;
+}
+
+#examplesList li:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
+
